--- a/Planillas/Planillas.csproj
+++ b/Planillas/Planillas.csproj
@@ -50,6 +50,11 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Linq, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Linq.4.3.0\lib\net463\System.Linq.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -122,6 +127,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AREAController.cs" />
+    <Compile Include="Controllers\ControlsController.cs" />
     <Compile Include="Controllers\EMPLEADOController.cs" />
     <Compile Include="Controllers\HOMEController.cs" />
     <Compile Include="Controllers\TIPO_EMPLEADOController.cs" />
@@ -275,10 +281,16 @@
     <Content Include="Views\TIPO_EMPLEADO\TIPO_EMPLEADO.cshtml" />
     <Content Include="Views\EMPLEADO\EMPLEADO.cshtml" />
     <Content Include="Views\TRASLADO\TRASLADO.cshtml" />
+    <Content Include="Views\AREA\Create.cshtml" />
+    <Content Include="Views\EMPLEADO\Details.cshtml" />
+    <Content Include="Views\AREA\Edit.cshtml" />
+    <Content Include="Views\AREA\Delete.cshtml" />
+    <Content Include="Views\AREA\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Controls\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
