Subiendo mtto Empleado
Subiendo mtto Empleado

--- a/Planillas/bin/Planillas.dll.config
+++ b/Planillas/bin/Planillas.dll.config
@@ -5,8 +5,10 @@
   -->
 <configuration>
 	<connectionStrings>
-  <add name="DBPlanilla" connectionString="Data Source=DESKTOP-QD61HMF; uid=sa; pwd=e-coffeetech; database=PLANILLAS " />
-  <add name="PLANILLASConnectionString" connectionString="Data Source=DESKTOP-QD61HMF;Initial Catalog=PLANILLAS;Persist Security Info=True;User ID=sa;Password=e-coffeetech" providerName="System.Data.SqlClient" />
+		<!-- <add name="DBPlanilla" connectionString="Data Source=DESKTOP-QD61HMF; uid=sa; pwd=e-coffeetech; database=PLANILLAS " />
+  <add name="PLANILLASConnectionString" connectionString="Data Source=DESKTOP-QD61HMF;Initial Catalog=PLANILLAS;Persist Security Info=True;User ID=sa;Password=e-coffeetech" providerName="System.Data.SqlClient" /> -->
+    <add name="DBPlanilla" connectionString="Data Source=DESKTOP-RJND44F; uid=sa; pwd=e-coffeetech; database=PLANILLAS " />
+    <add name="PLANILLASConnectionString" connectionString="Data Source=DESKTOP-RJND44F;Initial Catalog=PLANILLAS;Persist Security Info=True;User ID=sa;Password=e-coffeetech" providerName="System.Data.SqlClient" />
  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
