--- a/Planillas/Planillas.csproj
+++ b/Planillas/Planillas.csproj
@@ -134,6 +134,9 @@
     <Compile Include="Controllers\TIPO_EMPLEADOController.cs" />
     <Compile Include="Controllers\TRASLADOController.cs" />
     <Compile Include="Controllers\USUARIOController.cs" />
+    <Compile Include="DBPlanillas.cs">
+      <DependentUpon>DBPlanillas.dbml</DependentUpon>
+    </Compile>
     <Compile Include="DBPlanillas.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -295,6 +298,9 @@
     <Content Include="Views\TIPO_EMPLEADO\Edit.cshtml" />
     <Content Include="Views\TRASLADO\Details.cshtml" />
     <Content Include="Views\TRASLADO\Delete.cshtml" />
+    <Content Include="Views\EMPLEADO\Create.cshtml" />
+    <Content Include="Views\EMPLEADO\Edit.cshtml" />
+    <Content Include="Views\EMPLEADO\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
